<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	    <RelativeLayout
	        android:id="@+id/user_profile_header_bg"
	        android:layout_width="match_parent"
	        android:layout_height="150dip"
	        android:orientation="vertical" 
	        android:background="@drawable/user_profile_bg1" >
	        <ImageView 
	            android:id="@+id/user_profile_back"
	            android:layout_width="30dp"
	        	android:layout_height="30dp"
	        	android:src="@drawable/btn_back_normal_night"
	        	android:layout_alignParentLeft="true"
	        	android:layout_alignParentTop="true"
	        	android:layout_marginLeft="5dp"
	        	android:layout_marginTop="10dp" />
	    </RelativeLayout>
	    <RelativeLayout
	        android:id="@+id/user_profile_header"
	        android:layout_below="@id/user_profile_header_bg"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginTop="-60dp" >    
	        <ImageView 
	            android:id="@+id/user_profile_avatar"
	            android:layout_width="80dp"
	        	android:layout_height="80dp"
	        	android:src="@drawable/default_round_head"
	        	android:layout_centerHorizontal="true" />
	        <RelativeLayout
	            android:id="@+id/user_profile_info"
	            android:layout_below="@id/user_profile_avatar"
		        android:layout_width="wrap_content"
		        android:layout_height="40dp"
		        android:layout_centerHorizontal="true"
		        android:orientation="horizontal">
		        <TextView 
		            android:id="@+id/user_profile_username"
		            android:layout_width="wrap_content"
		            android:layout_height="40dp"
		            android:layout_centerHorizontal="true"
		            android:textSize="24sp"
		            android:text="@string/user_profile_username" />
		        <ImageView
		            android:id="@+id/user_verity_flag"
		            android:layout_toRightOf="@id/user_profile_username"
		            android:layout_alignTop="@id/user_profile_username"
		            android:layout_width="22dp"
		            android:layout_height="22dp"
		            android:layout_marginTop="2dp"
		            android:src="@drawable/user_verity_flag" />
	        </RelativeLayout>
	        <TextView
	         	android:id="@+id/user_profile_signature"
	         	android:layout_below="@id/user_profile_info"
	         	android:layout_width="260dp"
	         	android:layout_height="wrap_content"
	         	android:singleLine="false"
	         	android:maxLines="5"
	         	android:layout_centerHorizontal="true"
	         	android:text="@string/user_profile_signature"
	         	android:textSize="18sp" />
		</RelativeLayout>
		<RelativeLayout
	          android:id="@+id/user_profile_tabs"
	          android:layout_below="@id/user_profile_header"
	          android:layout_width="match_parent"
	          android:layout_height="match_parent"
	          android:background="@drawable/ic_bg">
	          <LinearLayout
			        android:id="@+id/user_profile_tabs_bar"
			        android:layout_width="fill_parent"
			        android:layout_height="40.0dip"
			        android:background="#FFFFFF" >
			
			        <TextView
			            android:id="@+id/user_profile_introduce"
			            android:layout_width="fill_parent"
			            android:layout_height="fill_parent"
			            android:layout_weight="1.0"
			            android:gravity="center"
			            android:text="@string/user_profile_introduce"
			            android:textColor="#000000"
			            android:textSize="20.0dip" />
			
			        <TextView
			            android:id="@+id/user_profile_follow"
			            android:layout_width="fill_parent"
			            android:layout_height="fill_parent"
			            android:layout_weight="1.0"
			            android:gravity="center"
			            android:text="@string/user_profile_follow"
			            android:textColor="#000000"
			            android:textSize="20.0dip" />
			
			        <TextView
			            android:id="@+id/user_profile_blogs"
			            android:layout_width="fill_parent"
			            android:layout_height="fill_parent"
			            android:layout_weight="1.0"
			            android:gravity="center"
			            android:text="@string/user_profile_blogs"
			            android:textColor="#000000"
			            android:textSize="20.0dip" />
	    	</LinearLayout>
	
		    <ImageView
		        android:id="@+id/user_profile_tabs_cursor"
		        android:layout_below="@id/user_profile_tabs_bar"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:scaleType="matrix"
		        android:src="@drawable/ic_line" />
		
		    
	    </RelativeLayout>
	    <android.support.v4.view.ViewPager
	        android:id="@+id/user_profile_page"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/user_profile_tabs"
	        android:layout_gravity="center"
	        android:background="#000000"
	        android:flipInterval="30"
	        android:persistentDrawingCache="animation" />
	    <!-- 浮动 块 -->
		
	</RelativeLayout>
</ScrollView>
